# NinGine

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  ningine.cpp
Ningine/: CMakeLists.txt
Ningine/Headers/: CLContextWrapper.hpp  CLError.hpp  CLUtility.hpp  CLWrapper.hpp  GLContextWrapper.hpp  GLScreen.hpp  Light.hpp  Material.hpp  Ningine.hpp  NingineInit.hpp  OpenCLContextWrapper.hpp  OpenGLContextWrapper.hpp  Ray.hpp  Scene.hpp  Utility.hpp
Ningine/Math/Headers/: Matrix.hpp  Vector.hpp
Ningine/Math/Source/: Matrix.cpp  Vector.cpp
Ningine/Source/: CLContextWrapper.cpp  CLUtility.cpp  CLWrapper.cpp  GLContextWrapper.cpp  GLScreen.cpp  GLShaderProgram.cpp  Ningine.cpp  OpenCLContextWrapper.cpp  OpenCLUtility.cpp  OpenGLContextWrapper.cpp  Scene.cpp
include/: CLError.hpp  CLWrapper.hpp  Camera.hpp  GLScreen.hpp  GLShaderProgram.hpp  GraphicsContextBridge.hpp  Ningine.hpp  NingineInit.hpp  OpenCLContext.hpp  OpenCLContextWrapper.hpp  OpenCLUtility.hpp  OpenGLContext.hpp  OpenGLContextWrapper.hpp  Scene.hpp  Sphere.hpp  Utility.hpp  Vector.hpp
include/graphics/: Shader.h
include/math/: Point.h  Vector.h
source/: CLError.cpp  CLWrapper.cpp  GLScreen.cpp  GLShaderProgram.cpp  Ningine.cpp  OpenCLContext.cpp  OpenCLContextWrapper.cpp  OpenCLUtility.cpp  OpenGLContext.cpp  OpenGLContextWrapper.cpp  Scene.cpp
source/Math/: CMakeLists.txt
source/Shaders/: vertex.vert
source/Shaders/OpenCL/: ray_tracer.cl
source/shaders/: fragment.fs
src/graphics/: Shader.cpp
src/math/: Vector.h
src/shaders/: fragment.frag  fragment.fs  fragment.glsl  vertex.glsl  vertex.vert  vertex.vs
tracer/: CMakeLists.txt  nintracer.cpp
tracer/include/: CLError.hpp  CLWrapper.hpp  GLProgram.h  GLScreen.hpp  GLShaderProgram.hpp  Material.hpp  Ningine.h  Ningine.hpp  OpenCLUtility.hpp  Sphere.hpp  Vector.hpp
tracer/source/: CLWrapper.cpp  GLProgram.cpp  GLScreen.cpp  GLShaderProgram.cpp  Ningine.cpp  OpenCLUtility.cpp
tracer/source/shaders/GLSL/: basic.frag  basic.vert
tracer/source/shaders/OpenCL/: raytracer.cl  testRayTracer.cl
